# tiktokEditor

./: pyproject.toml
videoeditor/: middleware.py  outils.py  settings.json
videoeditor/windows/: index.py  main.py  variables.py
