[tool.poetry]
name = "videoeditor"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "videoeditor"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
customtkinter = "^5.2.2"
yt-dlp = "^2024.3.10"
moviepy = "^1.0.3"
Pillow = "^10.2.0"
pyinstaller = "^6.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
videoeditor = "videoeditor.windows.index:main"
